--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="applicable-device" content="pc">
     <title>Tea Time - Chowin个人博客</title>
   </head>
