基本布局及移动端响应式

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="applicable-device" content="pc">
+    <meta name="keywords" content="Chowin，博客，Web前端，Vue.js">
+    <meta name="description" content="Chowin的个人博客">
+    <meta name="robots" content="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="author" content="Chowin,1983451555@qq.com">
+    <meta name="copyright" content="Chowin">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Tea Time - Chowin个人博客</title>
   </head>
   <body>
